      change as LessTif evolves.

    Several bug fixes, including:
    - Improved directory support.  Sources and executables can reside
      in several different directories.
    - Several TTY problems fixed.  Switching between execution window 
      and debugger console should work fine now; the execution window
      can be opened, closed and re-opened without DDD crashing or
      hanging.
    - Editor problems fixed.  Invoking a source editor via `Edit'
      should work fine now.
    - The rubber band outline no more clutters the data display.
    - No more endless scrolling when glyphs are enabled.  Scrolling is
      slightly faster, too.
    - On HP-UX, the `@' character is no more discarded from GDB input.
    - On Solaris 2.x, annoying DBX warnings like `dbx: -r option only
      recognized for C++' are silently ignored.
    - You can now specify the location of own VSL libraries via the
      `vslPath' resource.
    - The `--attach' and `--separate' options now work; they are no
      more overridden by the settings in `~/.dddinit'.


DDD 1.4d
--------

    Bug fix release; fixes problems introduced in DDD 1.4c.

    Changes to DDD 1.4c:
    - Several people have reported problems accessing the fonts
      specified in DDD 1.4c.  We have thus now re-enabled the scheme
      from DDD 1.4b; how to change fonts is explained in the DDD FAQ.
    - Various fixes for C++ compilers other than GCC included (notably
      Sun CC 4.0 on Solaris 2.x)
    - The VSL interpreter can now be controlled upon DDD invocation;
      type `ddd --vsl-help' for a list of options.  This is intended
      for debugging forthcoming display customization.

    This release should configure, compile and run out-of-the-box on
    OSF systems.  Please let us know about any remaining problems.


DDD 1.4c
--------

    Bug fix release.  No user-visible changes.

    Changes to DDD 1.4b:
    - Major restructuring of `ddd.C', the DDD main program;